--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.6
+Date: 2023-08-19
+  Bugfixes:
+    - prevent crash after Undo (Ctrl+Z), only half was restored. WORKAROUND disabled undo for now.
+---------------------------------------------------------------------------------------------------
 Version: 2.0.5
 Date: 2023-08-18
   Changes:
