--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.7
+Date: 2023-08-27
+  Bugfixes:
+    - FIX BUX:4 (https://mods.factorio.com/mod/Kux-SlimInserters/discussion/64ea3bd4b9a3af5e7de53a8e)
+---------------------------------------------------------------------------------------------------
 Version: 2.0.6
 Date: 2023-08-19
   Bugfixes:
