--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.8
+Date: 2023-08-20
+  Bugfixes:
+    - FIX BUX:5 (https://mods.factorio.com/mod/Kux-SlimInserters/discussion/64ee2f5b299a6707d9febb02)
+  Changes:
+    - use KuxCoreLib 2.8.0
+---------------------------------------------------------------------------------------------------
 Version: 2.0.7
 Date: 2023-08-27
   Bugfixes:
